[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/world/Circle.gd" type="Script" id=1]
[ext_resource path="res://assets/circle.png" type="Texture" id=2]
[ext_resource path="res://assets/circle_shader.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/little_white_64.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.163399, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 10.0
scale = 0.15
scale_random = 0.12
color_ramp = SubResource( 7 )

[sub_resource type="CircleShape2D" id=5]

[node name="Circle" type="KinematicBody2D" groups=[
"circles",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.092, 0.092 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -1
amount = 16
speed_scale = 0.2
visibility_rect = Rect2( -50, -50, 100, 100 )
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="RayCastA" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastB" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 10 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastC" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="StuckDetector" type="Area2D" parent="."]
visible = false
gravity_vec = Vector2( 0, 0 )
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StuckDetector"]
visible = false
shape = SubResource( 5 )
